k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: webook-redis
spec:
    selector:
        app: webook-redis
    ports:
        -   protocol: TCP
            port: 6379
            targetPort: 6379 # redis 默认用的端口
            nodePort: 30003
    type: NodePort
