k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: webook
spec:
    selector:
        app: webook
    ports:
        -   protocol: TCP
            name: http
            port: 80 # 把 80 端口映射到 8080 端口
            targetPort: 8080 # 转发到 pod 上的啥端口
    type: LoadBalancer # 当作一个负载均衡
